[tool.poetry]
name = "ntfbexcelconverter"
version = "0.1.0"
description = ""
authors = ["Nicholas Zolton <nicholaszolton@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
xlwings = "^0.33.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
